@@ -3862,18 +3862,9 @@ name|DataMapEvent
 name|e
 parameter_list|)
 block|{
-name|DefaultMutableTreeNode
-name|domainNode
+name|DataChannelDescriptor
+name|dataChannelDescriptor
 init|=
-name|getProjectModel
-argument_list|()
-operator|.
-name|getNodeForObjectPath
-argument_list|(
-operator|new
-name|Object
-index|[]
-block|{
 name|e
 operator|.
 name|getDomain
@@ -3896,6 +3887,20 @@ argument_list|()
 operator|.
 name|getRootNode
 argument_list|()
+decl_stmt|;
+name|DefaultMutableTreeNode
+name|domainNode
+init|=
+name|getProjectModel
+argument_list|()
+operator|.
+name|getNodeForObjectPath
+argument_list|(
+operator|new
+name|Object
+index|[]
+block|{
+name|dataChannelDescriptor
 block|}
 argument_list|)
 decl_stmt|;
@@ -3968,6 +3973,65 @@ argument_list|(
 name|newMapNode
 argument_list|)
 expr_stmt|;
+block|}
+for|for
+control|(
+name|DataNodeDescriptor
+name|dataNode
+range|:
+operator|new
+name|ArrayList
+argument_list|<>
+argument_list|(
+name|dataChannelDescriptor
+operator|.
+name|getNodeDescriptors
+argument_list|()
+argument_list|)
+control|)
+block|{
+for|for
+control|(
+name|String
+name|dataMapName
+range|:
+name|dataNode
+operator|.
+name|getDataMapNames
+argument_list|()
+control|)
+block|{
+if|if
+condition|(
+name|e
+operator|.
+name|getDataMap
+argument_list|()
+operator|.
+name|getName
+argument_list|()
+operator|.
+name|equals
+argument_list|(
+name|dataMapName
+argument_list|)
+condition|)
+block|{
+name|mediator
+operator|.
+name|fireDataNodeEvent
+argument_list|(
+operator|new
+name|DataNodeEvent
+argument_list|(
+name|this
+argument_list|,
+name|dataNode
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 block|}
 block|}
 specifier|public
